--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="container"> 
          <div class="header-top">
       		 <div class="logo">
-				<a href="index.html"><img src="images/logo.png" alt=""/></a>
+				<a href="index.html"><img src="images/logo.png" alt="" class="logotext"/></a>
 			 </div>
 		   <div class="top-menu">
 		   	<span class="menu"> </span>
