--- a/index.html
+++ b/index.html
@@ -33,11 +33,35 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
+
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.5/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.5/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyBTZDh8DOVi0TK9BBnQYKYQWlDbHw5w6Fs",
+      authDomain: "fair-route-tool.firebaseapp.com",
+      projectId: "fair-route-tool",
+      storageBucket: "fair-route-tool.appspot.com",
+      messagingSenderId: "861128813101",
+      appId: "1:861128813101:web:8413b86ce232ea7c0d66a4",
+      measurementId: "G-THD9YYHF59"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '766494427';
+    var serviceWorkerVersion = '117706522';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
